; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_dolfptoa.c_mfptoa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_dolfptoa.c_mfptoa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mfptoa(i32 %0, i32 %1, i16 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i16, align 2
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i16 %2, i16* %6, align 2
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @M_ISNEG(i32 %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @M_NEG(i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %12, %3
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i16, i16* %6, align 2
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i8* @dolfptoa(i32 %17, i32 %18, i32 %19, i16 signext %20, i32 %21)
  ret i8* %22
}

declare dso_local i32 @M_ISNEG(i32) #1

declare dso_local i32 @M_NEG(i32, i32) #1

declare dso_local i8* @dolfptoa(i32, i32, i32, i16 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
